# dressme

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  TODO.md  docker-compose.yml  dressme.code-workspace  eslint.config.js  index.html  notebook.ipynb  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tail-api-logs.mjs  vite.config.ts  vitest.config.ts  wrangler.jsonc
.claude/: settings.json
.github/workflows/: api-tests.yml  ci.yml
.husky/: pre-commit
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  combining.py  db.py  docker-compose.yml  main.py  models.py  notebook.ipynb  pyproject.toml  test_main.py
api/.cursor/rules/: run-tests.mdc
api/dressme/: combining.py
api/evals/: conftest.py  eval_garment_classification.py  eval_wearable_classification.py  garment_classification.py  test_garment_classification.py
api/experiments/: gemini.ipynb  initial.ipynb
api/src/dressme/: auth.py  avatar_generation.py  background_tasks.py  blob_storage.py  combining.py  eval.py  eval_cli.py  garment_classification.py  image_utils.py  main.py  schemas.py  settings.py  test_doubles.py  test_image_utils.py  test_main.py  wearable_categories.py  wearable_classification.py  woa_generation.py
api/src/dressme/db/: __init__.py  models.py  seed.py
api/tests/: test_image_utils.py  test_main.py
api/wardrobe/: auth.py  combining.py  db.py  models.py  seed.py  settings.py
api/wardrobe/db/: __init__.py  models.py  seed.py
client/: .env  .env.example  .env.production  .gitignore  .prettierignore  README.md  eslint.config.js  generate-client.ts  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tail-api-logs.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
client/.wrangler/deploy/: config.json
client/app/: app.css  root.tsx
client/app/api/: sdk.gen.ts  types.gen.ts
client/app/components/ui/: tabs.tsx
client/app/routes/: home.tsx
client/src/: api.ts  app.tsx  home.tsx  hooks.ts  main.tsx  utils.test.ts  utils.ts
client/src/api/: sdk.gen.ts  types.gen.ts
client/src/components/: auth-image.tsx  auth-provider.tsx  authenticated-image.tsx  v0-add-clothes-form.tsx
client/src/components/ui/: button.tsx  wearable-add-card.tsx  wearable-file-input-button.tsx
client/src/hooks/: api.ts
client/src/pages/: 404.tsx  add.tsx  avatar.tsx  home.tsx  login.tsx  profile.tsx  welcome.tsx
client/worker/: index.ts
e2e/: auth.setup.ts  wardrobe.spec.ts
experiments/: .gitignore  avatar_generation.ipynb  pyproject.toml  selfie_generation.ipynb  vton.ipynb
experiments/masking-categories/: README.md  build_annotation_page.py  categories.json  generate_masks.py  summarize_masking.py
images/: .gitignore
plans/: 2026-02-20-client-side-wearable-compositing.md
src/: app.test.tsx  app.tsx  index.css
src/api/: sdk.gen.ts  types.gen.ts
src/components/: auth-provider.tsx  authenticated-image.test.tsx  full-page-spinner.tsx  wearable-add-card.tsx  wearable-category-form-field.tsx  wearable-file-input-button.tsx
src/components/ui/: select.tsx  tabs.tsx
src/hooks/: api.ts  use-toast.ts
src/pages/: 404.tsx  add.test.tsx  add.tsx  home.test.tsx  home.tsx  welcome.tsx
src/test/: auth-state.ts  constants.ts  handlers.ts  setup.tsx  test.ts  utils.tsx  worker.ts
terraform/: README.md
terraform/dressme-tf/: api.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/dressme-tfbackend/: .terraform.lock.hcl  main.tf  providers.tf  terraform.tfvars.example  variables.tf
worker/: index.ts
