[tool.poetry]
name = "virtual-wardrobe"
version = "0.1.0"
description = ""
authors = ["Nimo Beeren <nimobeeren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
