[tool.poetry]
name = "virtual-wardrobe"
version = "0.1.0"
authors = ["Nimo Beeren <nimobeeren@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
replicate = "^0.34.1"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^8.27.0"
python-dotenv = "^1.0.1"
nbstripout = "^0.7.1"
tqdm = "^4.66.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
