[project]
name = "dressme"
version = "0.1.0"
authors = [{ name = "Nimo Beeren", email = "nimobeeren@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pillow>=10.4.0,<11",
    "replicate>=0.34.1,<0.35",
    "requests>=2.32.3,<3",
    "fastapi[standard]>=0.115.0,<0.116",
    "sqlmodel>=0.0.22,<0.0.23",
    "pydantic>=2.10.2,<3",
    "python-multipart>=0.0.20,<0.0.21",
    "pydantic-settings>=2.7.1,<3",
    "pyjwt[crypto]>=2.10.1,<3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "ipython>=8.27.0,<9",
    "python-dotenv>=1.0.1,<2",
    "nbstripout>=0.7.1,<0.8",
    "tqdm>=4.66.5,<5",
    "ipywidgets>=8.1.5,<9",
    "pytest>=8.3.4,<9",
    "pyright>=1.1.399",
]

[project.scripts]
seed = "dressme.db.seed:seed"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
